Configuration choose to destroy certificate after use implementation or not

--- a/conf/mod_appreciation.conf.dist
+++ b/conf/mod_appreciation.conf.dist
@@ -11,6 +11,15 @@
 Appreciation.RequireCertificate.Enabled = 1
 
 #################################
+#
+# Destroy certificate after use
+#
+# Default: 1 (enabled)
+#
+
+Appreciation.DestroyCertificate.Enabled = 0
+
+#################################
 
 #################################
 #
